Stop admin tables cutoff

--- a/front/src/assets/scss/admin_table.scss
+++ b/front/src/assets/scss/admin_table.scss
@@ -3,7 +3,7 @@
 }
 
 table.table.admin-table {
-  width: 100%;
+  width: 100vh;
 
   td {
     word-break: break-word;
